Bug 248305 - Kate searches for the wrong term when using Ctrl-F, Enter.
Summary: Kate searches for the wrong term when using Ctrl-F, Enter.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: search (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: HI normal
Target Milestone: ---
Assignee: Bernhard Beschow
URL:
Keywords:
: 261655 262465 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-18 23:27 UTC by Dima Ryazanov
Modified: 2011-02-22 13:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dima Ryazanov 2010-08-18 23:27:31 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

In KDE 4.4, I used to be able to search for a term by selecting it, pressing Ctrl-F, then pressing Enter. Now, however, pressing Enter causes the search term to be replaced with something else (maybe from a previous search?).


Reproducible: Always

Steps to Reproduce:
Select a word.
Press Ctrl-F.
Press Enter.


Actual Results:  
Kate searches for some unrelated term.

Expected Results:  
Kate should search for the term I selected.
Comment 1 Matthias Fuchs 2010-11-07 13:39:10 UTC
I have the same problem in KDevelop from trunk (kdelibs, kdesdk ... also from trunk) though I can't always reproduce it.

The way it looks like here is I search for a certain term A and press next. Suddenly the search term changes to B and the find is also B, pressing again changes it to C ...
Comment 2 Milian Wolff 2010-11-07 14:06:01 UTC
I also had this just now. To reproduce:

asdf
foobar
yxcv

1) search for asd
2) search for foo
3) search for yxc
4) ctrl + f -> select some item from the history (e.g. asd again)
6) f3
Comment 3 Milian Wolff 2010-12-20 13:57:54 UTC
Fixed in git, need to be merged into SVN and backported into 4.6 branch

commit 9ba4d7adbe6c5350cc1f885b878ff13d5b28c383
Author: Milian Wolff <mail@milianw.de>
Date:   Mon Dec 20 13:55:56 2010 +0100

    fix regression introduced in f52c93919a158decd3399d0893efa49e57547009
    properly set the current index in addCurrentTextToHistory
    
    BUG: 248305
Comment 4 Christoph Cullmann 2010-12-28 14:11:42 UTC
SVN commit 1209887 by cullmann:

mwolff:

    fix regression introduced in f52c93919a158decd3399d0893efa49e57547009
    properly set the current index in addCurrentTextToHistory
    
BUG: 248305



 M  +3 -8      search/katesearchbar.cpp  
 M  +0 -1      search/katesearchbar.h  
 M  +6 -0      tests/searchbar_test.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1209887
Comment 5 Milian Wolff 2011-01-03 11:52:58 UTC
*** Bug 261655 has been marked as a duplicate of this bug. ***
Comment 6 Milko Krachounov 2011-02-16 14:45:20 UTC
Does this also fix the same problem that arises when you do press Ctrl+F, enter word and press enter?
Comment 7 Bernhard Beschow 2011-02-22 13:01:36 UTC
*** Bug 262465 has been marked as a duplicate of this bug. ***