fix regression introduced in f52c93919a158decd3399d0893efa49e57547009 properly set the current index in addCurrentTextToHistory

BUG: 248305